# trackIT

./: .gitignore  DATABASE_SETUP.md  README.md  electron.vite.config.ts  index.html  kill-trackit-ports.ps1  package-lock.json  package.json  pnpm-lock.yaml  start-dev.ps1  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.bivvy/: abcd-climb.md  ef12-climb.md  ef12-moves.json
OLDfactorIT/: README.md  TROUBLESHOOTING.md  changes.patch  documentation.html  electron-builder.json  electron-builder.json5  electron.vite.config.ts  electron_structure.txt  eslint.config.js  index.html  npm  package-lock.json  package.json  tailwind.config.js  tall tailwind-animate  test-env.js  tsconfig.app.json  vite.config.ts
OLDfactorIT/DocsFolder/: logging.md
OLDfactorIT/depeciated_dist-electron/: preload.js
OLDfactorIT/dist-electron/: get-electron-binding-DvYiOx8E.js  main.js
OLDfactorIT/docs/: framework.md  technical-documentation.md  user-guide.md
OLDfactorIT/electron/: preload.ts
OLDfactorIT/src/: App.css  main.tsx
dist-electron/: main.js  preload.js
docs/: CHANGELOG.md  development-status.md  documentation.html  getting-started.md  git-log.md  memory.md  project.md  settings-architecture.md  technical-documentation.md  troubleshooting.md  user-guide.md
electron/: main.ts  preload.ts
electron/preload/: index.ts
frontend/: .cta.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/api/: adminEntities.ts
frontend/components/: AdminEntityManager.tsx  AssetList.tsx
frontend/docs/: CHANGELOG.md  README.md  documentation.html  project.md  settings-architecture.md
frontend/prisma/: adminEntityUtils.ts  dev.db-journal  schema.prisma  seed.ts  testAdminUtils.ts  types.ts
frontend/src/: main.tsx  routeTree.gen.js  routeTree.gen.ts  styles.css
frontend/src-tauri/: build.rs
logs/: db_url_log.txt  db_url_log_2025-05-11_02-42-55.txt  db_url_log_2025-05-12_03-41-52.txt  db_url_log_2025-05-12_03-44-35.txt  db_url_log_2025-05-12_22-40-30.txt  db_url_log_2025-05-12_22-44-26.txt  db_url_log_2025-05-12_23-09-04.txt  db_url_log_2025-05-12_23-09-34.txt  db_url_log_2025-05-12_23-11-15.txt  db_url_log_2025-05-12_23-11-39.txt  db_url_log_2025-05-12_23-14-17.txt  db_url_log_2025-05-12_23-17-07.txt  db_url_log_2025-05-12_23-25-05.txt  db_url_log_2025-05-12_23-29-41.txt  db_url_log_2025-05-13_00-07-37.txt  db_url_log_2025-05-13_00-11-22.txt  db_url_log_2025-05-13_00-14-49.txt  db_url_log_2025-05-13_00-16-29.txt
prisma/: schema.prisma  seed.ts
refactored_trackit/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  vite.config.ts
refactored_trackit/docs/: CHANGELOG.md  development-status.md  documentation.html  documentation.md  git-log.md  troubleshooting-max-stack-size.md  troubleshooting.md
refactored_trackit/prisma/: dev.db  schema.prisma  seed.ts
refactored_trackit/src/: main.tsx  routeTree.gen.ts  routeTree.tsx  router.ts
refactored_trackit/src-tauri/: Cargo.toml  tauri.conf.json
refactored_trackit/src-tauri/src/: commands.rs  db.rs  main.rs
src/: App.tsx  TestPage.tsx  index.css  main.tsx  routeTree.gen.ts  routeTree.tsx  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/logs/: db_url_log.txt
src-tauri/src/: OLD_main.rs  commands.rs  db.rs  main.rs
src-tauri/src/entity/: asset.rs  consumable.rs  location.rs  maintenancelog.rs  mod.rs  prelude.rs  project.rs  transaction.rs  user.rs
src/components/: AddItemDialog.tsx  AddItemForm.tsx  AutocompleteInput.tsx  BarcodeScanner.tsx  BarcodeScannerDialog.tsx  BasicDetailsTab.tsx  BatchOperations.tsx  CategoryManager.tsx  CategorySummary.tsx  DashboardSummaryCard.tsx  DebugInfo.tsx  EditItemDialog.tsx  EditItemForm.tsx  EditableItemList.tsx  ErrorBoundary.tsx  (+22 more)
(+190 files in other folders)
